<resources>
    <string name="app_name">dz131125second</string>
    <string name="your_name">Ваше имя</string>
    <string name="your_age">Ваш возраст</string>
    <string name="open_card">Открыть открытку</string>
    <string name="_return">Назад</string>
    <string name="happy_birthday">С днем рождения, </string>
    <string name="birthday_card_description">Открытка с днем рождения</string>
</resources>